[560] Add title bar and fix layout spacing

--- a/gascd_frontend/src/styles/styles.scss
+++ b/gascd_frontend/src/styles/styles.scss
@@ -52,11 +52,11 @@
   padding: 20px;
   text-decoration: none;
 }
-/* @media (min-width: 48.0625em) {
+@media (min-width: 48.0625em) {
   .app-card {
-    min-height: 145px;
+    min-height: 160px;
   }
-} */
+}
 
 .app-card p:last-child {
   margin-bottom: 0;
